--- a/index.html
+++ b/index.html
@@ -11,23 +11,94 @@
 </head>
 
 <body>
+
   <header>
     <div class="container-fluid bg-primary text-white text-center">Weather Dashboard</div>
   </header>
+
   <main class="d-flex m-3">
-    <form class="d-flex row m-3">
+    <aside>
+    <form class="m-3">
       <div class="mb-3">
         <label for="inputCity" class="form-label">Search for a city:</label>
         <input type="password" class="form-control" id="inputCity">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
-      <ul id="todo-list"></ul>
+      <ul id="searchHistory"></ul>
     </form>
+    <ul></ul>
+  </aside>
 
     <div class="container border border-primary m-3 currentBox">
-      <h1 id="weatherAPI">weather info</h1>
+      <h1><Span id="currentCity"></Span><span id="currentDate"></span></h1>
+      <h2>Temp:<span id="todayTemp"></span></h2>
+      <h2>Humidity:<span id="todayHumid"></span></h2>
+      <h2>Wind Speed:<span id="todayWindSp"></span></h2>
     </div>
+
   </main>
+  <section class="row">
+    
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+
+        <h5 class="card-title"><span id="day1Forecast"></span></h5>
+        <img src="" alt="">
+        <p class="card-text">Temp:<span id="day1Temp"></span></p>
+        <p class="card-text">Wind:<span id="day1Wind"></span></p>
+        <p class="card-text">Humidity:<span id="day1Humid"></span></p>
+
+      </div>
+    </div>
+
+   <div class="card" style="width: 18rem;">
+      <div class="card-body">
+
+        <h5 class="card-title"><span id="day2Forecast"></span></h5>
+        <img src="" alt="">
+        <p class="card-text">Temp:<span id="day2Temp"></span></p>
+        <p class="card-text">Wind:<span id="day2Wind"></span></p>
+        <p class="card-text">Humidity:<span id="day2Humid"></span></p>
+
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+
+        <h5 class="card-title"><span id="day3Forecast"></span></h5>
+        <img src="" alt="">
+        <p class="card-text">Temp:<span id="day3Temp"></span></p>
+        <p class="card-text">Wind:<span id="day3Wind"></span></p>
+        <p class="card-text">Humidity:<span id="day3Humid"></span></p>
+
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+
+        <h5 class="card-title"><span id="day4Forecast"></span></h5>
+        <img src="" alt="">
+        <p class="card-text">Temp:<span id="day4Temp"></span></p>
+        <p class="card-text">Wind:<span id="day4Wind"></span></p>
+        <p class="card-text">Humidity:<span id="day4Humid"></span></p>
+
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+
+        <h5 class="card-title"><span id="day5Forecast"></span></h5>
+        <img src="" alt="">
+        <p class="card-text">Temp:<span id="day5Temp"></span></p>
+        <p class="card-text">Wind:<span id="day5Wind"></span></p>
+        <p class="card-text">Humidity:<span id="day5Humid"></span></p>
+
+      </div>
+    </div>
+
+
+
+  </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
