added variables and event listener for submit button/almost works, but doesnt

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <form class="m-3">
       <div class="mb-3">
         <label for="inputCity" class="form-label">Search for a city:</label>
-        <input type="password" class="form-control" id="inputCity">
+        <input type="text" class="form-control" id="inputCity">
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
       <ul id="searchHistory"></ul>
     </form>
     <ul></ul>
@@ -33,7 +33,7 @@
       <h1><Span id="currentCity"></Span><span id="currentDate"></span></h1>
       <h2>Temp:<span id="todayTemp"></span></h2>
       <h2>Humidity:<span id="todayHumid"></span></h2>
-      <h2>Wind Speed:<span id="todayWindSp"></span></h2>
+      <h2>Wind Speed:<span id="todayWind"></span></h2>
     </div>
 
   </main>
