got API info to populate where it needs to

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
   </aside>
 
     <div class="container border border-primary m-3 currentBox">
-      <h1><Span id="currentCity"></Span><span id="currentDate"></span></h1>
-      <h2>Temp:<span id="todayTemp"></span></h2>
-      <h2>Humidity:<span id="todayHumid"></span></h2>
-      <h2>Wind Speed:<span id="todayWind"></span></h2>
+      <h1><Span id="currentCity"></Span>(<span id="currentDate"></span>)</h1>
+      <h2>Temp: <span id="todayTemp"></span>&#8457</h2>
+      <h2>Humidity: <span id="todayHumid"></span>%</h2>
+      <h2>Wind Speed: <span id="todayWind"></span> MPH</h2>
     </div>
 
   </main>
-  <section class="row">
+  <section class="row justify-content-between">
     
     <div class="card" style="width: 18rem;">
       <div class="card-body">
 
         <h5 class="card-title"><span id="day1Forecast"></span></h5>
         <img src="" alt="">
-        <p class="card-text">Temp:<span id="day1Temp"></span></p>
-        <p class="card-text">Wind:<span id="day1Wind"></span></p>
-        <p class="card-text">Humidity:<span id="day1Humid"></span></p>
+        <p class="card-text">Temp:<span id="day1Temp"></span>&#8457</p>
+        <p class="card-text">Wind:<span id="day1Wind"></span> MPH</p>
+        <p class="card-text">Humidity:<span id="day1Humid">%</span></p>
 
       </div>
     </div>
@@ -56,9 +56,9 @@
 
         <h5 class="card-title"><span id="day2Forecast"></span></h5>
         <img src="" alt="">
-        <p class="card-text">Temp:<span id="day2Temp"></span></p>
-        <p class="card-text">Wind:<span id="day2Wind"></span></p>
-        <p class="card-text">Humidity:<span id="day2Humid"></span></p>
+        <p class="card-text">Temp:<span id="day2Temp"></span>&#8457</p>
+        <p class="card-text">Wind:<span id="day2Wind"></span> MPH</p>
+        <p class="card-text">Humidity:<span id="day2Humid">%</span></p>
 
       </div>
     </div>
@@ -67,9 +67,9 @@
 
         <h5 class="card-title"><span id="day3Forecast"></span></h5>
         <img src="" alt="">
-        <p class="card-text">Temp:<span id="day3Temp"></span></p>
-        <p class="card-text">Wind:<span id="day3Wind"></span></p>
-        <p class="card-text">Humidity:<span id="day3Humid"></span></p>
+        <p class="card-text">Temp:<span id="day3Temp">&#8457</span></p>
+        <p class="card-text">Wind:<span id="day3Wind"></span> MPH</p>
+        <p class="card-text">Humidity:<span id="day3Humid">%</span></p>
 
       </div>
     </div>
@@ -78,9 +78,9 @@
 
         <h5 class="card-title"><span id="day4Forecast"></span></h5>
         <img src="" alt="">
-        <p class="card-text">Temp:<span id="day4Temp"></span></p>
-        <p class="card-text">Wind:<span id="day4Wind"></span></p>
-        <p class="card-text">Humidity:<span id="day4Humid"></span></p>
+        <p class="card-text">Temp:<span id="day4Temp"></span>&#8457</p>
+        <p class="card-text">Wind:<span id="day4Wind"></span> MPH</p>
+        <p class="card-text">Humidity:<span id="day4Humid">%</span></p>
 
       </div>
     </div>
@@ -89,9 +89,9 @@
 
         <h5 class="card-title"><span id="day5Forecast"></span></h5>
         <img src="" alt="">
-        <p class="card-text">Temp:<span id="day5Temp"></span></p>
-        <p class="card-text">Wind:<span id="day5Wind"></span></p>
-        <p class="card-text">Humidity:<span id="day5Humid"></span></p>
+        <p class="card-text">Temp:<span id="day5Temp"></span>&#8457</p>
+        <p class="card-text">Wind:<span id="day5Wind"></span> MPH</p>
+        <p class="card-text">Humidity:<span id="day5Humid">%</span></p>
 
       </div>
     </div>
