--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 <body>
 
   <header>
-    <div class="container-fluid bg-primary text-white text-center">Weather Dashboard</div>
+    <div class="container-fluid text-white text-center">
+      <h1>Weather Dashboard</h1>
+
+      </div>
   </header>
+
 <div class="d-flex">
   <aside id="searchSection">
     <form class="m-3">
@@ -30,20 +34,19 @@
   
   <main class="column my-4 me-4 ms-0">
     <div class="container border border-primary m-3 currentBox">
-      <h1><Span id="currentCity"></Span>(<span id="currentDate"></span>)</h1>
+      <h1><Span id="currentCity"></Span>(<span id="currentDate"></span>) <img src=""  id="currentIcon"> </h1>
       <h2>Temp: <span id="todayTemp"></span>&#8457</h2>
       <h2>Humidity: <span id="todayHumid"></span>%</h2>
       <h2>Wind Speed: <span id="todayWind"></span> MPH</h2>
     </div>
 
-  
-  <section class="row ms-0">
-    
-    <div class="card" style="width: 15rem;">
+  <h2 class="p-3">5 Day Forecast:</h2>
+  <section class="row ms-0 p-3">
+        <div class="card m-2" style="width: 12rem;">
       <div class="card-body">
 
         <h5 class="card-title"><span id="day1Forecast"></span></h5>
-        <img src="" alt="">
+        <img src=""  id="day1Icon">
         <p class="card-text">Temp:<span id="day1Temp"></span>&#8457</p>
         <p class="card-text">Wind:<span id="day1Wind"></span> MPH</p>
         <p class="card-text">Humidity:<span id="day1Humid">%</span></p>
@@ -51,44 +54,44 @@
       </div>
     </div>
 
-   <div class="card" style="width: 15rem;">
+   <div class="card m-2" style="width: 12rem;">
       <div class="card-body">
 
         <h5 class="card-title"><span id="day2Forecast"></span></h5>
-        <img src="" alt="">
+        <img src=""  id="day2Icon">
         <p class="card-text">Temp:<span id="day2Temp"></span>&#8457</p>
         <p class="card-text">Wind:<span id="day2Wind"></span> MPH</p>
         <p class="card-text">Humidity:<span id="day2Humid">%</span></p>
 
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
+    <div class="card m-2" style="width: 12rem;">
       <div class="card-body">
 
         <h5 class="card-title"><span id="day3Forecast"></span></h5>
-        <img src="" alt="">
+        <img src=""  id="day3Icon">
         <p class="card-text">Temp:<span id="day3Temp">&#8457</span></p>
         <p class="card-text">Wind:<span id="day3Wind"></span> MPH</p>
         <p class="card-text">Humidity:<span id="day3Humid">%</span></p>
 
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
+    <div class="card m-2" style="width: 12rem;">
       <div class="card-body">
 
         <h5 class="card-title"><span id="day4Forecast"></span></h5>
-        <img src="" alt="">
+        <img src=""  id="day4Icon">
         <p class="card-text">Temp:<span id="day4Temp"></span>&#8457</p>
         <p class="card-text">Wind:<span id="day4Wind"></span> MPH</p>
         <p class="card-text">Humidity:<span id="day4Humid">%</span></p>
 
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
+    <div class="card m-2" style="width: 12rem;">
       <div class="card-body">
 
         <h5 class="card-title"><span id="day5Forecast"></span></h5>
-        <img src="" alt="">
+        <img src=""  id="day5Icon">
         <p class="card-text">Temp:<span id="day5Temp"></span>&#8457</p>
         <p class="card-text">Wind:<span id="day5Wind"></span> MPH</p>
         <p class="card-text">Humidity:<span id="day5Humid">%</span></p>
