little changes, spacing, font color

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <label for="inputCity" class="form-label">Search for a city:</label>
         <input type="text" class="form-control" id="inputCity">
       </div>
-      <button type="button" class="btn btn-primary" id="submitBtn">Submit</button>
+      <button type="button" class="btn" id="submitBtn">Submit</button>
       <ul id="searchHistory"></ul>
     </form>
     <ul id="searchHistory"></ul>
@@ -34,7 +34,7 @@
   
   <main class="column my-4 me-4 ms-0">
     <div class="container border border-primary m-3 currentBox">
-      <h1><Span id="currentCity"></Span>(<span id="currentDate"></span>) <img src=""  id="currentIcon"> </h1>
+      <h1><Span id="currentCity"></Span> (<span id="currentDate"></span>) <img src=""  id="currentIcon"> </h1>
       <h2>Temp: <span id="todayTemp"></span>&#8457</h2>
       <h2>Humidity: <span id="todayHumid"></span>%</h2>
       <h2>Wind Speed: <span id="todayWind"></span> MPH</h2>
