last minute fixes and added readme

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <button type="button" class="btn" id="submitBtn">Submit</button>
       </form>
-    <ul id="searchHistory"></ul>
+    <div id="searchHistory"></div>
   </aside>
   
   <main class="column my-4 me-4 ms-0">
@@ -46,9 +46,9 @@
 
         <h5 class="card-title"><span id="day1Forecast"></span></h5>
         <img src=""  id="day1Icon">
-        <p class="card-text">Temp:<span id="day1Temp"></span>&#8457</p>
-        <p class="card-text">Wind:<span id="day1Wind"></span> MPH</p>
-        <p class="card-text">Humidity:<span id="day1Humid">%</span></p>
+        <p class="card-text">Temp: <span id="day1Temp"></span>&#8457</p>
+        <p class="card-text">Wind: <span id="day1Wind"></span> MPH</p>
+        <p class="card-text">Humidity: <span id="day1Humid">%</span></p>
 
       </div>
     </div>
@@ -58,9 +58,9 @@
 
         <h5 class="card-title"><span id="day2Forecast"></span></h5>
         <img src=""  id="day2Icon">
-        <p class="card-text">Temp:<span id="day2Temp"></span>&#8457</p>
-        <p class="card-text">Wind:<span id="day2Wind"></span> MPH</p>
-        <p class="card-text">Humidity:<span id="day2Humid">%</span></p>
+        <p class="card-text">Temp: <span id="day2Temp"></span>&#8457</p>
+        <p class="card-text">Wind: <span id="day2Wind"></span> MPH</p>
+        <p class="card-text">Humidity: <span id="day2Humid">%</span></p>
 
       </div>
     </div>
@@ -69,9 +69,9 @@
 
         <h5 class="card-title"><span id="day3Forecast"></span></h5>
         <img src=""  id="day3Icon">
-        <p class="card-text">Temp:<span id="day3Temp">&#8457</span></p>
-        <p class="card-text">Wind:<span id="day3Wind"></span> MPH</p>
-        <p class="card-text">Humidity:<span id="day3Humid">%</span></p>
+        <p class="card-text">Temp: <span id="day3Temp">&#8457</span></p>
+        <p class="card-text">Wind: <span id="day3Wind"></span> MPH</p>
+        <p class="card-text">Humidity: <span id="day3Humid">%</span></p>
 
       </div>
     </div>
@@ -80,9 +80,9 @@
 
         <h5 class="card-title"><span id="day4Forecast"></span></h5>
         <img src=""  id="day4Icon">
-        <p class="card-text">Temp:<span id="day4Temp"></span>&#8457</p>
-        <p class="card-text">Wind:<span id="day4Wind"></span> MPH</p>
-        <p class="card-text">Humidity:<span id="day4Humid">%</span></p>
+        <p class="card-text">Temp: <span id="day4Temp"></span>&#8457</p>
+        <p class="card-text">Wind: <span id="day4Wind"></span> MPH</p>
+        <p class="card-text">Humidity: <span id="day4Humid">%</span></p>
 
       </div>
     </div>
@@ -91,9 +91,9 @@
 
         <h5 class="card-title"><span id="day5Forecast"></span></h5>
         <img src=""  id="day5Icon">
-        <p class="card-text">Temp:<span id="day5Temp"></span>&#8457</p>
-        <p class="card-text">Wind:<span id="day5Wind"></span> MPH</p>
-        <p class="card-text">Humidity:<span id="day5Humid">%</span></p>
+        <p class="card-text">Temp: <span id="day5Temp"></span>&#8457</p>
+        <p class="card-text">Wind: <span id="day5Wind"></span> MPH</p>
+        <p class="card-text">Humidity: <span id="day5Humid">%</span></p>
 
       </div>
     </div>
